<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
        android:background="@drawable/my_button_bg">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:fontFamily="serif"
                android:text="@string/Menu"
                android:textColor="@color/lightGreen"
                android:textSize="50sp" />

            <Button
                android:id="@+id/jojoButton"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button_bg"
                android:text="@string/jojo_Button"
                android:textColor="@color/lightGreen"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="70dp" />

            <Button
                android:id="@+id/ReZero"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button_bg"
                android:text="@string/reZeroButton"
                android:textColor="@color/lightGreen" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>